# freeCodeCamp-Website-2

./: .13gih6ft2tdab880007571~  .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: application_submitted.html  banner.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html
